--- a/css/custom.css
+++ b/css/custom.css
@@ -69,3 +69,110 @@
   padding: 4px 23px 4px 23px;
   outline: none;
 }
+
+.modal-content {
+  border-radius: 15px;
+}
+.modal-labels {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  text-align: center;
+  color: #5e5e5e;
+}
+
+.modal-inputs {
+  width: 100%;
+  padding: 5px 20px 5px 20px;
+  border: none;
+  outline: none;
+  border-bottom: 2px solid #363636;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+.login-title h3 {
+  position: relative;
+  transform: translateY(-25px);
+  font-family: "Open Sans";
+  font-style: bold;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 54px;
+  color: #000000;
+}
+.line {
+  width: 100px;
+  height: 4px;
+  background-color: #e65a1f;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, -35px);
+}
+.modal-google-btn {
+  background: #ffffff;
+  box-shadow: 0px 0px 13px 5px rgba(0, 0, 0, 0.07);
+  border-radius: 37px;
+  border: none;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 54px;
+  text-align: center;
+  color: #000000;
+  width: 100%;
+  outline: none;
+}
+
+.modal-fb-btn {
+  background: #4267b2;
+  box-shadow: 0px 0px 13px 5px rgba(0, 0, 0, 0.07);
+  border-radius: 37px;
+  border: none;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 54px;
+  text-align: center;
+  color: #ffffff;
+  width: 100%;
+  outline: none;
+}
+.modal-login-btn {
+  background: linear-gradient(90deg, #e43d22 0%, #e65a1f 100%);
+  border-radius: 40px;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 54px;
+  text-align: center;
+  color: #ffffff;
+  border: none;
+  outline: none;
+  width: 60%;
+}
+.modal-registro-btn {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 54px;
+  text-align: center;
+  color: #3d87f7;
+  border: none;
+  background-color: white;
+  transition: 100ms;
+}
+.modal-registro-btn:hover {
+  position: relative;
+  transform: translateY(-4px);
+  color: blue;
+  transition: 100ms;
+}
