--- a/css/custom.css
+++ b/css/custom.css
@@ -43,11 +43,11 @@
   background: #7149bc;
   box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.25);
   border-radius: 0px 0px 0px 34px;
-  width: 50%;
+  width: 65%;
   height: auto;
   position: absolute;
   right: 0;
-  padding: 14px;
+  padding: 15px;
 }
 .search-input {
   background: #ffffff;
@@ -175,4 +175,23 @@
   transform: translateY(-4px);
   color: blue;
   transition: 100ms;
+}
+.section-1 {
+  margin-top: 150px;
+}
+.title {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 65px;
+  color: #e65a1f;
+}
+.content {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 30px;
+  color: rgba(29, 29, 36, 0.75);
 }
