--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 .nav-style {
   background: #ffffff;
   box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.25);
@@ -194,4 +194,63 @@
   font-size: 18px;
   line-height: 30px;
   color: rgba(29, 29, 36, 0.75);
+}
+
+.footer-style {
+  background-color: #2d1260;
+}
+.footer-content {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 29px;
+  color: #cacaca;
+}
+.footer-link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  color: #ffffff;
+  text-decoration: none;
+  transition: 0.5s;
+  display: flex;
+}
+.footer-link:hover {
+  color: #E65A1F;
+  font-weight: bold;
+  display: flex;
+  transform: translateX(10px);
+  transition: 0.5s;
+}
+.footer-phone{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 29px;
+  color: #cacaca;
+  text-decoration: none;
+  transition: 0.2s;
+}
+.footer-phone:hover {
+  color: #E65A1F;
+  font-weight: bold;
+  transition: 0.2s;
+}
+
+.mb-extend{
+  margin-bottom: 100px;
+}
+
+
+@media (max-width: 767px) {
+  .footer-link{
+    display: block;
+    text-align: center;
+  }
+  .footer-link:hover {
+    display: block;
+  }
 }
