--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,11 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 .nav-style {
   background: #ffffff;
   box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.25);
@@ -18,6 +23,14 @@
   color: #000000;
   background-color: rgba(255, 255, 255, 0);
   border: none;
+  margin: 15px;
+}
+.nav-perfil {
+  text-decoration: none;
+  border: 4px solid #7149bc;
+  border-radius: 50%;
+  width: 50px;
+  background-color: #a4a8bb;
 }
 
 .sesion-btn {
@@ -43,18 +56,19 @@
   background: #7149bc;
   box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.25);
   border-radius: 0px 0px 0px 34px;
-  width: 65%;
+  width: 60%;
   height: auto;
   position: absolute;
   right: 0;
-  padding: 15px;
+  padding: 18px;
 }
+
 .search-input {
   background: #ffffff;
   border: 3px solid #7149bc;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
-  width: 30vw;
+  width: 39vw;
   padding-left: 15px;
   font-family: "Open Sans";
   font-style: normal;
@@ -69,6 +83,44 @@
   padding: 4px 23px 4px 23px;
   outline: none;
 }
+
+.purple-nav-2 {
+  background: #7149bc;
+  box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.25);
+  width: 100%;
+  height: auto;
+  position: absolute;
+  right: 0;
+  padding: 18px;
+  text-align: center;
+}
+
+.purple-links {
+  text-decoration: none;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 21px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.purple-links:hover {
+  color: #ec7e0a;
+}
+
+.purple-img-link {
+  position: absolute;
+  transform: translateY(-6px);
+}
+
+/*------------------------------------------------------*/
+/*------------------------------------------------------*/
+/*------------------------------------------------------*/
+/*------------------------------------------------------*/
+/*------------------------------------------------------*/
 
 .modal-content {
   border-radius: 15px;
@@ -112,6 +164,12 @@
   position: relative;
   left: 50%;
   transform: translate(-50%, -35px);
+}
+.line-2 {
+  width: 100%;
+  height: 4px;
+  background-color: #e65a1f;
+  
 }
 .modal-google-btn {
   background: #ffffff;
@@ -179,6 +237,9 @@
 .section-1 {
   margin-top: 150px;
 }
+.section-2 {
+  margin-top: 100px;
+}
 .title {
   font-family: "Open Sans";
   font-style: normal;
@@ -187,6 +248,23 @@
   line-height: 65px;
   color: #e65a1f;
 }
+.title-2 {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 45px;
+  line-height: 77px;
+  color: #000000;
+}
+.sub-title {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 30px;
+  color: #e65a1f;
+}
+
 .content {
   font-family: "Open Sans";
   font-style: normal;
@@ -214,17 +292,16 @@
   font-size: 17px;
   color: #ffffff;
   text-decoration: none;
-  transition: 0.5s;
+  transition: 0.3s;
   display: flex;
 }
 .footer-link:hover {
-  color: #E65A1F;
-  font-weight: bold;
+  color: #e65a1f;
   display: flex;
   transform: translateX(10px);
-  transition: 0.5s;
+  transition: 0.3s;
 }
-.footer-phone{
+.footer-phone {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -235,18 +312,17 @@
   transition: 0.2s;
 }
 .footer-phone:hover {
-  color: #E65A1F;
+  color: #e65a1f;
   font-weight: bold;
   transition: 0.2s;
 }
 
-.mb-extend{
+.mb-extend {
   margin-bottom: 100px;
 }
 
-
 @media (max-width: 767px) {
-  .footer-link{
+  .footer-link {
     display: block;
     text-align: center;
   }
