--- a/css/paquetes-style.css
+++ b/css/paquetes-style.css
@@ -8,8 +8,8 @@
   position: relative;
 }
 .paquetes-card:hover {
-  box-shadow: 0px 6px 14px 0px 
-    rgba(0, 0, 0, 0.45);
+  box-shadow: 0px 6px 17px 2px 
+    rgba(134,89,219,0.53);
   transform: translateY(-10px);
   transition: 200ms;
 }
@@ -23,19 +23,6 @@
   color: #000000;
 }
 
-ul {
-  list-style: none;
-}
-
-ul li::before {
-  font-size: 25px;
-  content: "\2022";
-  color: #7149bc;
-  font-weight: bold;
-  display: inline-block;
-  width: 0.5em;
-  margin-left: -1em;
-}
 li {
   font-family: "Open Sans";
   font-style: normal;
@@ -68,10 +55,7 @@ table {
   font-weight: bold;
   font-size: 15px;
   color: #ffffff;
-  background: linear-gradient(
-    90deg, 
-    #e43d22 0%, 
-    #e65a1f 100%);
+  background: linear-gradient(90deg, #e43d22 0%, #e65a1f 100%);
   border-radius: 40px;
   text-decoration: none;
   padding: 15px 41px 15px 41px;
@@ -87,10 +71,6 @@ table {
   );
 }
 
-
-
-
-
 .ajuste-btn {
   position: absolute;
   bottom: 0;
@@ -98,7 +78,14 @@ table {
   transform: translate(-50%, -25px);
 }
 
-
+.advice {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 21px;
+  line-height: 57px;
+  color: #dc2c2c;
+}
 
 @media (max-width: 767px) {
   .paquetes-card {
@@ -133,17 +120,17 @@ table {
   }
 }
 @media (max-width: 752px) {
-  .section-2{
+  .section-2 {
     margin-top: 120px;
   }
 }
 @media (max-width: 420px) {
-  .section-2{
+  .section-2 {
     margin-top: 140px;
   }
 }
 @media (max-width: 315px) {
-  .section-2{
+  .section-2 {
     margin-top: 170px;
   }
 }
